# single-use-password

./: .env  .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  rust-toolchain.toml  tailwind.config.js
migrations/: 20240120135221_create-table.down.sql  20240120135221_create-table.up.sql
src/: app.rs  app_context.rs  app_result.rs  config.rs  create_password_form.rs  fileserv.rs  lib.rs  main.rs  password.rs  password_form.rs
src/passwords/: router.rs
