[package]
name = "single-use-password"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.7.2" }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108" }
thiserror = { version = "1.0.52" }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "uuid"] }
clap = { version = "4.4.11", features = ["env", "derive"] }
dotenv = { version = "0.15.0" }
rand = { version = "0.8.5" }

tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dependencies.uuid]
features = ["serde", "v4"]
